--- a/football_tournament/templates/tournament/login.html
+++ b/football_tournament/templates/tournament/login.html
@@ -1,7 +1,7 @@
 {% extends 'tournament/base.html' %}
 
 {% block content %}
-<h2>Login</h2>
+<h2>Area Riservata</h2>
 <form method="post" action="{% url 'login' %}">
     {% csrf_token %}
     {{ form.as_p }}
