--- a/football_tournament/templates/tournament/base.html
+++ b/football_tournament/templates/tournament/base.html
@@ -23,7 +23,7 @@
             top: 0;
             /* Stay at the top */
             left: 0;
-            background-color: #111;
+            background-color: #1C4192;
             /* Black */
             overflow-x: hidden;
             /* Disable horizontal scroll */
@@ -55,8 +55,9 @@
             left: 0;
             bottom: 0;
             width: 100%;
-            background-color: #ffffff;
-            color: rgb(0, 0, 0);
+            height: 1%;
+            background-color: #1C4192;
+            color: rgb(255, 255, 255);
             font-size: 14px;
         }
 
