--- a/football_tournament/templates/tournament/base.html
+++ b/football_tournament/templates/tournament/base.html
@@ -1,67 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 
+{% load static %}
+
+
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}CopaMundial 2024{% endblock title %}</title>
-    <style>
-        /* Add your CSS styling here */
-        body {
-            display: flex;
-            overflow-x: hidden; /* Only horizontal scrolling is disabled */
-            height: 100%; /* Full height to the body might be necessary */
-        }
-
-        .sidebar {
-            height: 100vh;
-            /* Full height */
-            width: 250px;
-            /* Sidebar width */
-            position: fixed;
-            /* Fixed Sidebar (stay in place on scroll) */
-            z-index: 1;
-            /* Stay on top */
-            top: 0;
-            /* Stay at the top */
-            left: 0;
-            background-color: #1C4192;
-            /* Black */
-            overflow-x: hidden;
-            /* Disable horizontal scroll */
-            padding-top: 20px;
-        }
-
-        .sidebar a {
-            padding: 10px 15px;
-            text-decoration: none;
-            font-size: 18px;
-            color: white;
-            display: block;
-        }
-
-        .sidebar a:hover {
-            color: #f1f1f1;
-        }
-
-        .main-content {
-            margin-left: 250px;
-            /* Same as the width of the sidebar */
-            padding: 0px 10px;
-        }
-
-        .sidebar .authenticated-links {
-            padding-left: 20px;
-            /* Add left padding to indent the links */
-        }
-        .sponsor {
-            margin-top: 100px
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'styles/base.css' %}">
+    {% block extra_css %}{% endblock %}
 </head>
 
 <body>
-    {% load static %}
+
     <div class="sidebar">
         <a href="{% url 'home' %}">Home</a>
         <a href="{% url 'team_and_player_list' %}">Squadre</a>
@@ -70,18 +23,20 @@
         <a href="{% url 'login' %}?next={{ request.path }}">Area Riservata</a>
         {% if user.is_authenticated %}
         <div class="authenticated-links">
-            <a href="{% url 'group_draw' %}">Sorteggio</a>
-            <a href="{% url 'manage_matches' %}">Gestione Partite</a>
             <a href="{% url 'manage_teams' %}">Gestione Squadre</a>
+            <a href="{% url 'manage_matches' %}">Gestione Partite</a>
+            <a href="{% url 'group_draw' %}">Sorteggio</a>
             <a href="#" onclick="event.preventDefault(); document.getElementById('logout-form').submit();">Logout</a>
             <form id="logout-form" action="{% url 'logout' %}" method="post" style="display: none;">
                 {% csrf_token %}
             </form>
         </div>
-        <a class="sponsor">Gli Amici della CopaMundial</a>
-        <a href="https://www.instagram.com/selos_design/" target="_blank"><img src="{% static 'selos.png' %}" alt="Logo" style="width: 80px; height: auto;"></a>
-        <a href="https://arredamentifumagalli1957.it/" target="_blank"><img src="{% static 'fumagalli.png' %}" alt="Logo" style="width: 180px; height: auto;"></a>
         {% endif %}
+        <a class="sponsor">Gli Amici della CopaMundial</a>
+        <a href="https://www.instagram.com/selos_design/" target="_blank"><img src="{% static 'images/selos.png' %}"
+                alt="Logo" style="width: 80px; height: auto;"></a>
+        <a href="https://arredamentifumagalli1957.it/" target="_blank"><img src="{% static 'images/fumagalli.png' %}"
+                alt="Logo" style="width: 180px; height: auto;"></a>
     </div>
 
     <div class="main-content">
@@ -93,7 +48,7 @@
         </main>
 
         <div class="footer">
-            
+
         </div>
     </div>
 
