--- a/football_tournament/templates/tournament/delete_team.html
+++ b/football_tournament/templates/tournament/delete_team.html
@@ -1,12 +1,11 @@
 {% extends 'tournament/base.html' %}
 
 {% block content %}
-<div class="container">
-    <h2>Are you sure you want to delete "{{ object.name }}"?</h2>
-    <form method="post">
-        {% csrf_token %}
-        <button type="submit" class="btn btn-danger">Confirm Delete</button>
-        <a href="{{ cancel_url }}" class="btn btn-secondary">Cancel</a>
-    </form>
-</div>
+  <p>Are you sure you want to delete "{{ object.name }}"?</p>
+
+  <form action="" method="post">
+    {% csrf_token %}
+    <input type="submit" value="Confirm">
+    <a href="{{ cancel_url }}">Cancel</a>
+  </form>
 {% endblock %}
