--- a/football_tournament/templates/tournament/team_list.html
+++ b/football_tournament/templates/tournament/team_list.html
@@ -41,7 +41,7 @@
                 <td>{{ team.name }}</td>
                 <td>
                     <a href="{% url 'create_or_update_team' team.id %}" class="btn btn-secondary">Modifica</a>
-                    <a href="{% url 'delete_team' team.id %}" class="btn btn-danger" onclick="return confirm('Sei sicuro di voler eliminare questa squadra?');">Elimina</a>
+                    <a href="{% url 'delete_team' team.id %}">Elimina</a>
                 </td>
             </tr>
             {% endfor %}
