--- a/football_tournament/tournament/static/styles/match_detail.css
+++ b/football_tournament/tournament/static/styles/match_detail.css
@@ -1,49 +1,50 @@
 .match-details {
-    width: 100%;
-    margin: 20px auto;
     display: flex;
-    flex-direction: column;
+    justify-content: space-around;
+    align-items: flex-start; /* Align items at the top of the container */
+    text-align: center;
 }
 
-.team-header {
+.team-info-container {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    align-items: flex-start; /* Align items at the top of the container */
+    justify-content: center;
+    width: 100%; /* Use full width to give space between teams */
 }
 
 .team-info {
-    flex-grow: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
+    margin: 0 20px; /* Adjust margin as needed */
+}
+
+.team-header h3 {
+    margin-bottom: 10px; /* Adjust space below the team name */
 }
 
 .score {
-    font-size: 24px;
-    font-weight: bold;
-    margin: 10px 0;
+    font-size: 2em; /* Makes the score larger */
+    margin-bottom: 10px; /* Adjust space below the score */
 }
 
 .goal-scorer {
-    margin-top: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 5px 0; /* Adjust space between goal scorers */
 }
 
-.goals {
-    display: inline-flex;
-    margin-left: 5px;
+.versus {
+    font-size: 24px; /* Adjust size as needed */
+    margin: 0 20px; /* Provide some horizontal spacing */
+    align-self: flex-start; /* Align 'versus' at the top of the flex container */
+    margin-top: 50px; /* Adjust this value to align at the top with the scores */
 }
 
 .goal-ball {
     width: 20px;
     height: 20px;
-    background-image: url('{% static "images/football_ball.png" %}');
     background-size: cover;
-    margin-right: 2px;
-}
-
-.versus {
-    font-size: 24px;
-    margin: 0 20px;
-    font-weight: bold;
+    margin-left: 5px; /* Adds space between text and balls */
 }
